[package]
name = "kiss-icp-core"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license-file = "LICENSE"
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["numa"]

nightly = ["hashbrown/nightly"]
numa = ["hwlocality", "rand"]

[dependencies]
kiss-icp-ops = { workspace = true }

anyhow = { workspace = true }
hashbrown = { workspace = true, features = ["rayon"] }
hwlocality = { workspace = true, optional = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true }
