[package]
name = "kiss-icp-core"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license-file = "LICENSE"
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

nightly = ["hashbrown/nightly"]

# For BLAS/LAPACK
accelerate = ["kiss-icp-ops/accelerate", "nalgebra-lapack/accelerate"]
intel-mkl = ["kiss-icp-ops/intel-mkl", "nalgebra-lapack/intel-mkl"]
netlib = ["kiss-icp-ops/netlib", "nalgebra-lapack/netlib"]
openblas = ["kiss-icp-ops/openblas", "nalgebra-lapack/openblas"]

[dependencies]
kiss-icp-ops = { workspace = true }

hashbrown = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
nalgebra-lapack = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true }
