[package]
name = "kiss-icp-ops"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss-icp-ops-core = { workspace = true }
kiss-icp-ops-eigen = { workspace = true }
kiss-icp-ops-sophus = { workspace = true }
