[package]
name = "kiss-icp-runtime"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["numa"]

numa = ["hwlocality", "rand"]

[dependencies]
anyhow = { workspace = true }
hwlocality = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true }
